@@ -1,5 +1,11 @@
+import codecs
+
+import io
+
 import csv
 import logging
+from django.core.files.uploadedfile import InMemoryUploadedFile
+from django.core.files.utils import FileProxyMixin
 from pathlib import Path
 from typing import Dict, Optional, Sequence
 
@@ -7,10 +13,10 @@ from django import forms
 from django.contrib import messages
 from django.contrib.admin import helpers
 from django.core.exceptions import ValidationError
-from django.core.validators import FileExtensionValidator
+from django.core.validators import FileExtensionValidator, MaxValueValidator, MinValueValidator
 from django.db.transaction import atomic
 from django.forms import Media
-from django.http import HttpResponseRedirect
+from django.http import HttpResponseRedirect, HttpResponse
 from django.shortcuts import render
 from django.utils.encoding import smart_str
 from django.utils.safestring import mark_safe
@@ -45,11 +51,6 @@ class BulkUpdateForm(forms.Form):
         help_text=_("CSV file"),
         validators=[FileExtensionValidator(allowed_extensions=["csv", "txt"])],
     )
-    # _async = forms.BooleanField(
-    #     label="Async",
-    #     required=False,
-    #     help_text=_("use Celery to run update in background"),
-    # )
     _clean = forms.BooleanField(
         label="Clean()", required=False, help_text=_("if checked calls obj.clean()")
     )
@@ -59,10 +60,8 @@ class BulkUpdateForm(forms.Form):
         required=False,
         help_text=_("if checked use obj.save() instead of manager.bulk_update()"),
     )
-
-    # _date_format = forms.CharField(
-    #     label="Date format", required=True, help_text=_("Date format")
-    # )
+    _dry_run = forms.BooleanField(label="DryRun", required=False,
+                                  help_text="Do not perform updates, just display results")
 
     @property
     def media(self):
@@ -154,6 +153,7 @@ def bulk_update(modeladmin, request, queryset):  # noqa
         form_initial = {
             "_selected_action": request.POST.getlist(helpers.ACTION_CHECKBOX_NAME),
             "_date_format": "%Y-%m-%d",
+            "_dry_run": False,
             "select_across": request.POST.get("select_across") == "1",
             "action": "bulk_update",
         }
@@ -174,19 +174,19 @@ def bulk_update(modeladmin, request, queryset):  # noqa
             if form.is_valid() and csv_form.is_valid() and map_form.is_valid():
                 header = csv_form.cleaned_data.pop("header")
                 csv_options = csv_form.cleaned_data
-                # validate = form.cleaned_data.get("_validate", False)
                 clean = form.cleaned_data.get("_clean", False)
-                # use_celery = form.cleaned_data.get("_async", False)
+                dry_run = form.cleaned_data.get("_dry_run", False)
                 try:
                     f = form.cleaned_data.pop("_file")
                     res = _bulk_update(
                         queryset,
-                        f.file.name,
+                        f,
                         mapping=map_form.get_mapping(),
                         header=header,
                         clean=clean,
                         indexes=map_form.cleaned_data["index_field"],
                         csv_options=csv_options,
+                        dry_run=dry_run
                     )
                     c = len(res["updated"])
                     messages.info(request, _("Updated %s records") % c)
@@ -202,7 +202,12 @@ def bulk_update(modeladmin, request, queryset):  # noqa
                     messages.error(request, f"{e.__class__.__name__}: {e}")
                     return HttpResponseRedirect(request.get_full_path())
                 else:
-                    return HttpResponseRedirect(request.get_full_path())
+                    return render(request, "adminactions/bulk_update_results.html",
+                                  context={"results": res,
+                                           "dry_run": dry_run,
+                                           "media": Media(css={"all": ["adminactions/css/bulkupdate.css"]}),
+                                           "action_short_description": bulk_update.short_description,
+                                           "opts": queryset.model._meta})
         else:
             form = bulk_update_form(initial=form_initial)
             csv_form = CSVConfigForm(initial=csv_initial, prefix="csv")
@@ -220,10 +225,10 @@ def bulk_update(modeladmin, request, queryset):  # noqa
             "map_form": map_form,
             "action_short_description": bulk_update.short_description,
             "title": "%s (%s)"
-            % (
-                bulk_update.short_description.capitalize(),
-                smart_str(modeladmin.opts.verbose_name_plural),
-            ),
+                     % (
+                         bulk_update.short_description.capitalize(),
+                         smart_str(modeladmin.opts.verbose_name_plural),
+                     ),
             "change": True,
             "is_popup": False,
             "save_as": False,
@@ -248,7 +253,7 @@ bulk_update.base_permission = "adminactions_bulkupdate"
 
 def _bulk_update(  # noqa: max-complexity: 18
     queryset,
-    filename,
+    file_name_or_object,
     *,
     mapping: Dict,
     indexes: Sequence[str],
@@ -256,54 +261,65 @@ def _bulk_update(  # noqa: max-complexity: 18
     header: bool = True,
     csv_options: Optional[Dict] = None,
     request=None,
+    dry_run: bool = False
 ):
     results = {
         "updated": [],
         "errors": [],
         "missing": [],
         "duplicates": [],
+        "changes": {}
     }
     adminaction_start.send(
         sender=queryset.model, action="bulk_update", request=request, queryset=queryset
     )
     try:
-        with Path(filename).open("r") as f:
-            if header:
-                reader = csv.DictReader(f.readlines(), **(csv_options or {}))
-                for k, v in mapping.items():
-                    if v not in reader.fieldnames:
-                        raise ValidationError(
-                            _("%s column is not present in the file") % v
-                        )
-            else:
-                reader = csv.reader(f.readlines(), **(csv_options or {}))
-                mapping = {k: int(v) - 1 for k, v in mapping.items()}
+        if isinstance(file_name_or_object, FileProxyMixin):
+            f = file_name_or_object
+        else:
+            f = Path(file_name_or_object).open("rb")
 
-            reverse = {v: k for k, v in mapping.items()}
-            with atomic():
-                for row in reader:
-                    key = {k: row[mapping[k]] for k in indexes}
-                    try:
-                        obj = queryset.get(**key)
-                        if header:
-                            for colname, value in row.items():
-                                field = reverse[colname]
+        if header:
+            reader = csv.DictReader(codecs.iterdecode(f, 'utf-8'), **(csv_options or {}))
+            for k, v in mapping.items():
+                if v not in reader.fieldnames:
+                    raise ValidationError(
+                        _("%s column is not present in the file") % v
+                    )
+        else:
+            reader = csv.reader(codecs.iterdecode(f, 'utf-8'), **(csv_options or {}))
+            mapping = {k: int(v) - 1 for k, v in mapping.items()}
+
+        reverse = {v: k for k, v in mapping.items()}
+        with atomic():
+            for i, row in enumerate(reader, 1):
+                key = {k: row[mapping[k]] for k in indexes}
+                try:
+                    obj = queryset.get(**key)
+                    changes = {}
+                    if header:
+                        for colname, value in row.items():
+                            field = reverse[colname]
+                            if field not in indexes:
+                                changes[field] = [getattr(obj, field), value]
+                                setattr(obj, field, value)
+                    else:
+                        for i, value in enumerate(row):
+                            if i in reverse.keys():
+                                field = reverse[i]
                                 if field not in indexes:
+                                    changes[field] = [getattr(obj, field), value]
                                     setattr(obj, field, value)
-                        else:
-                            for i, value in enumerate(row):
-                                if i in reverse.keys():
-                                    field = reverse[i]
-                                    if field not in indexes:
-                                        setattr(obj, field, value)
-                        if clean:
-                            obj.clean()
+                    results["changes"][str(key)] = changes
+                    if clean:
+                        obj.clean()
+                    if not dry_run:
                         obj.save()
-                        results["updated"].append(key)
-                    except queryset.model.DoesNotExist:
-                        results["missing"].append(key)
-                    except queryset.model.MultipleObjectsReturned:
-                        results["duplicates"].append(key)
+                    results["updated"].append(key)
+                except queryset.model.DoesNotExist:
+                    results["missing"].append(key)
+                except queryset.model.MultipleObjectsReturned:
+                    results["duplicates"].append(key)
         adminaction_end.send(
             sender=queryset.model,
             action="bulk_update",
