@@ -1,1 +1,1 @@
-table.bulk-update{border:1px solid #c9c9c9}table.bulk-update td{border-left:1px solid #c9c9c9}table.bulk-update select.func_select{min-width:100px}table th.title{background-color:var(--header-bg)}#col1{float:left;width:70%}#col1 table{width:90%}#col2{float:right;width:30%}#col2 table{width:90%}#col2 select{width:100%}/*# sourceMappingURL=bulkupdate.css.map */
+table th.title{background-color:var(--header-bg)}table.bulk-update{border:1px solid #c9c9c9}table.bulk-update td{border-left:1px solid #c9c9c9}table.bulk-update select.func_select{min-width:100px}#col1{float:left;width:70%}#col1 table{width:90%}#col2{float:right;width:30%}#col2 table{width:90%}#col2 select{width:100%}/*# sourceMappingURL=bulkupdate.css.map */
