@@ -1,25 +1,31 @@
-
-table.bulk-update {
-    border: 1px solid #c9c9c9;
-
-    td {
-        border-left: 1px solid #c9c9c9;
-    }
-
-    select.func_select {
-        min-width: 100px;
-    }
-}
-table{
-    th.title{
+table {
+    th.title {
         background-color: var(--header-bg);
     }
+
+    &.bulk-update {
+        border: 1px solid #c9c9c9;
+
+        td {
+            border-left: 1px solid #c9c9c9;
+        }
+
+        select.func_select {
+            min-width: 100px;
+        }
+    }
+     &.bulk-update-results {
+
+     }
+
 }
+
 #col1 {
     float: left;
     //padding-right: 10px;
     width: 70%;
-    table{
+
+    table {
         width: 90%;
     }
 }
@@ -27,7 +33,8 @@ table{
 #col2 {
     float: right;
     width: 30%;
-    table{
+
+    table {
         width: 90%;
     }
 }
